# LuwiAI-V3-Coder

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.idx/: dev.nix
examples/: evaluate_example.sh  inference_example.py  train_example.sh
slm_project/: config.py  dataset.py  evaluate.py  train.py
slm_project/utils/: text_cleaner.py
src/: cpu_optimizations.py  model.py  tokenizer.py
src/utils/: checkpoints.py  logging_utils.py
tests/: test_dataset.py  test_model.py  test_tokenizer.py  test_utils.py
