[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm_project"
version = "0.1.0"
description = "A small language model optimized for Intel Ivy Bridge CPUs."
authors = [{name="Your Name", email="your.email@example.com"}]
license = {text="MIT"}

[project.dependencies]
torch = ">=1.9.0"
numpy = ">=1.20.0"
pytest = ">=6.0.0"
